force-app/main/default/objects/Candidate__c/fields/Certification_s__c.field-meta.xml
<CustomField>
    <fullName>Certification_s__c</fullName>
    <label>Certification(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salesforce_Certifications</valueSetName>
    </valueSet>
</CustomField>