force-app/main/default/objects/Candidate__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_10_Scale</valueSetName>
    </valueSet>
</CustomField>