force-app/main/default/objects/Candidate__c/fields/Date_Status_Hired__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Hired__c</fullName>
    <label>Date Status Hired</label>
    <type>DateTime</type>
</CustomField>