force-app/main/default/objects/Candidate__c/fields/Date_Status_Interviewing__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Interviewing__c</fullName>
    <label>Date Status Interviewing</label>
    <type>DateTime</type>
</CustomField>