force-app/main/default/objects/Candidate__c/fields/Date_Status_New__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_New__c</fullName>
    <label>Date Status New</label>
    <type>DateTime</type>
</CustomField>