force-app/main/default/objects/Candidate__c/fields/Date_Status_On_hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_On_hold__c</fullName>
    <label>Date Status On hold</label>
    <type>DateTime</type>
</CustomField>