force-app/main/default/objects/Candidate__c/fields/Date_Status_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Qualified__c</fullName>
    <label>Date Status Qualified</label>
    <type>DateTime</type>
</CustomField>