force-app/main/default/objects/Candidate__c/fields/Date_Status_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Referrals__c</fullName>
    <label>Date Status Referrals</label>
    <type>DateTime</type>
</CustomField>