force-app/main/default/objects/Candidate__c/fields/Date_Status_Screening__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Screening__c</fullName>
    <label>Date Status Screening</label>
    <type>DateTime</type>
</CustomField>