force-app/main/default/objects/Candidate__c/fields/Date_Status_Technical_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Technical_Test__c</fullName>
    <label>Date Status Technical Test</label>
    <type>DateTime</type>
</CustomField>