force-app/main/default/objects/Candidate__c/fields/Date_Status_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Unqualified__c</fullName>
    <label>Date Status Unqualified</label>
    <type>DateTime</type>
</CustomField>