force-app/main/default/objects/Candidate__c/fields/English_Level__c.field-meta.xml
<CustomField>
    <fullName>English_Level__c</fullName>
    <label>English Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_10_Scale</valueSetName>
    </valueSet>
</CustomField>