force-app/main/default/objects/Candidate__c/fields/First_Interview_URL__c.field-meta.xml
<CustomField>
    <fullName>First_Interview_URL__c</fullName>
    <label>First Interview URL</label>
    <type>Url</type>
</CustomField>