force-app/main/default/objects/Candidate__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <inlineHelpText>To measure proactivity and communication, what homework are you giving to the candidate?</inlineHelpText>
    <label>Homework</label>
    <length>255</length>
    <type>Text</type>
</CustomField>