force-app/main/default/objects/Candidate__c/fields/Interview_Takeaways__c.field-meta.xml
<CustomField>
    <fullName>Interview_Takeaways__c</fullName>
    <inlineHelpText>Brief impression of the candidate based on the interview.</inlineHelpText>
    <label>Interview Takeaways</label>
    <length>255</length>
    <type>Text</type>
</CustomField>