force-app/main/default/objects/Candidate__c/fields/Number_of_Skills__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Skills__c</fullName>
    <formula>PICKLISTCOUNT( Skills__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Skills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>