force-app/main/default/objects/Candidate__c/fields/Problem_Solver__c.field-meta.xml
<CustomField>
    <fullName>Problem_Solver__c</fullName>
    <label>Problem-Solver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_10_Scale</valueSetName>
    </valueSet>
</CustomField>