force-app/main/default/objects/Candidate__c/fields/Role_s_to_Perform__c.field-meta.xml
<CustomField>
    <fullName>Role_s_to_Perform__c</fullName>
    <label>Role(s) to Perform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operations_Roles</valueSetName>
    </valueSet>
</CustomField>