force-app/main/default/objects/Candidate__c/fields/Second_Interview_URL__c.field-meta.xml
<CustomField>
    <fullName>Second_Interview_URL__c</fullName>
    <label>Second Interview URL</label>
    <type>Url</type>
</CustomField>