force-app/main/default/objects/Candidate__c/fields/Trailhead_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Profile__c</fullName>
    <label>Trailhead Profile</label>
    <type>Url</type>
</CustomField>