force-app/main/default/objects/Candidate__c/validationRules/URL_must_be_linkedin.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_must_be_linkedin</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
   OR(
      BEGINS(LinkedIn_URL__c, &quot;https://www.linkedin&quot;),
						ISBLANK(LinkedIn_URL__c)
   )
)</errorConditionFormula>
    <errorDisplayField>LinkedIn_URL__c</errorDisplayField>
    <errorMessage>The URL must be linkedIn</errorMessage>
</ValidationRule>