force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Status__c</columns>
    <columns>LinkedIn_URL__c</columns>
    <columns>Salary_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>