force-app/main/default/objects/Candidate__c/listViews/Interviewing_Candidates.listView-meta.xml
<ListView>
    <fullName>Interviewing_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Salary_Range__c</columns>
    <columns>Skills__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Candidate_Status__c</field>
        <operation>equals</operation>
        <value>Interviewing</value>
    </filters>
    <label>Interviewing Candidates</label>
</ListView>