force-app/main/default/objects/Candidate__c/listViews/Open_Candidates.listView-meta.xml
<ListView>
    <fullName>Open_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Role_s_to_Perform__c</columns>
    <columns>Salary_Range__c</columns>
    <columns>Interview_Takeaways__c</columns>
    <columns>Skills__c</columns>
    <columns>LinkedIn_URL__c</columns>
    <columns>Candidate_Status__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Candidate_Status__c</field>
        <operation>notEqual</operation>
        <value>Unqualified,Future Reference,Hired</value>
    </filters>
    <label>Open Candidates</label>
</ListView>