force-app/main/default/objects/Candidate__c/listViews/Screening_Candidates.listView-meta.xml
<ListView>
    <fullName>Screening_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Salary_Range__c</columns>
    <columns>Skills__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Candidate_Status__c</field>
        <operation>equals</operation>
        <value>Screening</value>
    </filters>
    <label>Screening Candidates</label>
</ListView>