force-app/main/default/objects/Candidate__c/listViews/Technical_Test_Candidates.listView-meta.xml
<ListView>
    <fullName>Technical_Test_Candidates</fullName>
    <columns>NAME</columns>
    <columns>Salary_Range__c</columns>
    <columns>Skills__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Candidate_Status__c</field>
        <operation>equals</operation>
        <value>Technical Test</value>
    </filters>
    <label>Technical Test Candidates</label>
</ListView>